build.log

> Task :compileJava FAILED
C:\Final Year Project\krishiYatra\src\main\java\com\krishiYatra\krishiYatra\buyer\mapper\BuyerMapperImpl.java:52: error: cannot find symbol
        response.setStatus(buyer.getStatus());
                ^
  symbol:   method setStatus(VerificationStatus)
  location: variable response of type BuyerDetailResponse
C:\Final Year Project\krishiYatra\src\main\java\com\krishiYatra\krishiYatra\delivery\mapper\DeliveryMapperImpl.java:58: error: cannot find symbol
        response.setStatus(delivery.getStatus());
                ^
  symbol:   method setStatus(VerificationStatus)
  location: variable response of type DeliveryDetailResponse
2 errors

[Incubating] Problems report is available at: file:///C:/Final%20Year%20Project/krishiYatra/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileJava'.
> Compilation failed; see the compiler output below.
  C:\Final Year Project\krishiYatra\src\main\java\com\krishiYatra\krishiYatra\buyer\mapper\BuyerMapperImpl.java:52: error: cannot find symbol
          response.setStatus(buyer.getStatus());
                  ^
    symbol:   method setStatus(VerificationStatus)
    location: variable response of type BuyerDetailResponse
  C:\Final Year Project\krishiYatra\src\main\java\com\krishiYatra\krishiYatra\delivery\mapper\DeliveryMapperImpl.java:58: error: cannot find symbol
          response.setStatus(delivery.getStatus());
                  ^
    symbol:   method setStatus(VerificationStatus)
    location: variable response of type DeliveryDetailResponse
  2 errors

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to generate a Build Scan (powered by Develocity).

BUILD FAILED in 2s
1 actionable task: 1 executed
